--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <!-- Required meta tags -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -66,7 +66,7 @@
   <!-- Features -->
 
   <section id="features">
-    <div class="row container features-main">
+    <div class="row">
       <div class="col-lg-4">
         <h3 class="features-text"><i class="fas fa-check-circle features-icons"></i> <br> Easy to use.</h3>
         <p class="features-p">So easy to use, even your dog could do it.</p>
