--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <button type="button" class="btn btn-dark btn-lg download-btn"> <i class="fab fa-apple"></i> Download</button>
             <button type="button" class="btn btn-outline-secondary btn-lg download-btn"> <i class="fab fa-google-play"></i> Download</button>
         </div>
-        <div class="col-lg-6 iphone6">
+        <div class="col-lg-6">
           <img class="iphone" src="images/iphone6.png" alt="iphone-mockup">
         </div>
       </div>
@@ -66,16 +66,16 @@
   <!-- Features -->
 
   <section id="features">
-    <div class="row">
+    <div class="row container features-main">
       <div class="col-lg-4">
         <h3 class="features-text"><i class="fas fa-check-circle features-icons"></i> <br> Easy to use.</h3>
         <p class="features-p">So easy to use, even your dog could do it.</p>
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-4 col-sm-12">
         <h3 class="features-text"><i class="fas fa-circle-notch features-icons"></i> <br> Elite Clientele</h3>
         <p class="features-p">We have all the dogs, the greatest dogs.</p>
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-4 col-sm-12">
         <h3 class="features-text"><i class="fab fa-gratipay features-icons"></i> <br> Guaranteed to work.</h3>
         <p class="features-p">Find the love of your dog's life or your money back.</p>
       </div>
