--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <!-- Required meta tags -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -65,7 +65,7 @@
 
   <!-- Features -->
 
-  <section id="features">
+  <div id="features">
     <div class="row container features-main">
       <div class="col-lg-4">
         <h3 class="features-text"><i class="fas fa-check-circle features-icons"></i> <br> Easy to use.</h3>
@@ -83,7 +83,7 @@
     </div>
 
 
-  </section>
+  </div>
 
 
   <!-- Testimonials -->
